compile_err.txt
src\java\controller\schedule\StaffScheduleServlet.java:171: error: cannot find symbol
            if (scheduleDAO.addScheduleRequest(schedule)) {
                           ^
  symbol:   method addScheduleRequest(StaffSchedule)
  location: variable scheduleDAO of type StaffScheduleDAO
src\java\controller\schedule\StaffScheduleServlet.java:209: error: cannot find symbol
            if (scheduleDAO.addScheduleRequest(schedule)) {
                           ^
  symbol:   method addScheduleRequest(StaffSchedule)
  location: variable scheduleDAO of type StaffScheduleDAO
2 errors
